# oren_vl

./: .gitignore  .gitmodules  CHANGELOG.md  DESIGN-FieldStorage.md  DESIGN-FuserKernels.md  DESIGN-VL-Fusion.md  DESIGN.md  Pipfile  README.md  STUDY-VL-Fusion.md  TODO.md  package.xml  requirements.txt  setup.cfg  setup.py
configs/: gui.yaml  replica.yaml  trainer-newer_college.yaml  trainer-replica-occ.yaml  trainer-replica-sdf.yaml  trainer-replica-vl.yaml  trainer-replica.yaml
docker/: build.bash
grad_sdf/: criterion.py  evaluator_base.py  evaluator_grad_sdf.py  frame.py  gui_trainer.py  model.py  octree_config.py  package.xml  residual_net.py  sdf_visualize.py  semi_sparse_octree_base.py  semi_sparse_octree_v2.py  setup.py  trainer.py  trainer_config.py  trainer_ros.py
grad_sdf_msgs/: CMakeLists.txt  package.xml
grad_sdf_ros/: package.xml  setup.cfg  setup.py
launch/: mapping_quad.launch.py  mapping_with_bag.launch.py
oren/: package.xml  setup.cfg  setup.py
oren_msgs/: CMakeLists.txt  package.xml
oren_ros/: package.xml  setup.cfg  setup.py
oren_vl/: package.xml  setup.cfg  setup.py
scripts/: .gitignore  ablation-office0.txt  ablation-room1-v2.txt  ablation-room1.txt  collect_metrics.py  demo.bash  demo_commands.bash  dump_field_predictions.py  eval_sdf_mesh.sh  hist_prior_residual.py  migrate_field_configs.py  newer_college_cam_view_config_o3d.json  newer_college_generate_test_set.bash  newer_college_obb_rotation.bash  probe_field_storage_explicit.py  probe_resize_observer.py  render_meshes_offscreen.py  replica_augment_views.bash  rotate-mesh.py  (+8 more)
(+174 files in other folders)
